started adding content and refining the design

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,11 @@
     <header>
 
     </header>
-    <main class="site-container">
+
+    <main>
       {{ content }}
     </main>
+
     <footer>
     </footer>
   </body>
