--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
   <!-- <script type="text/javascript" src="{{ site.baseurl }}/assets/js/jquery.sticky.js" async></script> -->
 
