--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -5,17 +5,19 @@
 $black: #2e2e2e
 $almostwhite: #fafafa
 $lightorange: #ff8b8b
-$purple: #5631ff
-$lightpurple: #5631ff5c
-$redorange: #fd4d69
+$lightpurple: #5631ff8f
 $green: #94e49c
-$lightgray:  #d0d0d0
+$midgray: #b6b6b6
+$lightgray: #d0d0d0
+$yellow: #fff468
+$blue: #1e44ff
+$slightlymorepurpleblue: #2943f7
 
 
 $textcolor: $black
 
-$h1color: $black
-$h2color: $redorange
+$h1color: $lightorange
+$h2color: $black
 
 //Screen size for responsiveness
 $small-screen: 320px
