--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="top">
 
 {% include head.html %}
 
@@ -7,7 +7,7 @@
     {% assign sortedPosts = site.posts | sort: 'order' %}
     <header>
       <h1>{{ site.data.settings.title }}</h1>
-      {{ site.data.settings.description }}
+      <!-- {{ site.data.settings.description }} -->
 
       <nav>
         {% for post in sortedPosts %}
@@ -25,13 +25,14 @@
           {{ post.title }}
         </span>
       </h2>
-
-    {% if post.list-style == "call-and-response" %}
-      <div class="call-and-response">
-    {% else %}
-      <div>
-    {% endif %}
-      {{ post.content }}
+      <div class="content">
+        {% if post.list-style == "call-and-response" %}
+          <div class="call-and-response">
+        {% else %}
+          <div>
+        {% endif %}
+          {{ post.content }}
+          </div>
       </div>
     </section>
 
@@ -39,8 +40,7 @@
 
     </main>
 
-    <footer>
-    </footer>
+    {% include footer.html %}
   </body>
 
 </html>
