--- a/assets/css/2-base/_base.scss
+++ b/assets/css/2-base/_base.scss
@@ -1,6 +1,11 @@
+* {
+  position: relative;
+  box-sizing: border-box;
+}
+
 :root {
   color: $textcolor;
-  font-size: 28px;
+  font-size: 30px;
   --step-up-5: 2em;
   --step-up-4: 1.7511em;
   --step-up-3: 1.5157em;
@@ -11,11 +16,13 @@
   --step-down-3: 0.6599em;
   --step-down-4: 0.5745em;
   --step-down-5: 0.5em;
+  scroll-behavior: smooth;
 }
 
 body {
   background: $almostwhite;
   font-family: 'Karla', sans-serif;
+  line-height: 1.6;
 }
 
 a:link, a:visited {
@@ -29,51 +36,92 @@ a:hover, a:active {
 }
 
 main, header, footer {
-  max-width: 35rem;
+  max-width: 30rem;
   margin: 0 auto;
   padding: 0 1.34rem;
   box-sizing: border-box;
 }
 
 header {
-  margin-bottom: 5.36em;
+  margin-bottom: 4.02em;
+  margin-top: 1.34rem;
 }
 
 
 nav {
   font-size: 0.8706em;
+  margin-top: 1.34rem;
 }
 
-nav a {
+nav a, footer a {
   display: inline-block;
-  border: solid $lightgray 1px;
+  border: solid $midgray 1px;
   padding: .5em;
-  margin-top: 1.34rem;
-  margin-right: .67rem;
+  margin-right: .4rem;
   border-radius: .25em;
   transition: .2s ease-out;
+  margin-bottom: .67rem;
 }
 
-nav a:hover {
-  border-color: #2e2e2e;
-  box-shadow: -.25em .25em 0px 0px #2e2e2e;
+nav a:last-of-type {
+  margin-right: 0;
+}
+
+nav a:hover, footer a:hover {
+  border-color: $black;
+  box-shadow: -.25em .25em 0px 0px $black;
   transform: translateX(.25em) translateY(-.25em);
 }
 
 
 h1 {
   font-size: 2em;
-  color: $h1color;
-  text-transform: lowercase;
+  color: $almostwhite;
+  box-shadow: 0 0 22px 27px $blue;
+  line-height: 1.2;
+  background: $blue;
+  font-weight: normal;
+  display: inline-block;
+  border-radius: 35%;
 }
 
 h2 {
   font-size: 1.5157em;
   color: $h2color;
   font-weight: normal;
-  text-decoration: underline;
+}
+
+h2 > span {
+  text-align: center;
+}
+
+h2 > span:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #fff468;
+  box-shadow: 0px 0px 20px 15px #fff468;
+  border-radius: 25%;
 }
 
 section {
-  margin-bottom: 5.36em;
+  margin-bottom: 4.69rem;
+  padding-top: .67rem;
+}
+
+section:last-of-type {
+  margin-bottom: 0;
+}
+
+.content {
+  font-size: 0.8706em;
+}
+
+footer {
+  text-align: right;
+  padding-bottom: 2.01rem;
 }
