--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -5,7 +5,7 @@
 $black: #2e2e2e
 $almostwhite: #fafafa
 $lightorange: #ff8b8b
-$lightpurple: #5631ff8f
+$lightpurple: #9e89fd
 $green: #94e49c
 $midgray: #b6b6b6
 $lightgray: #d0d0d0
