--- a/assets/css/2-base/_base.scss
+++ b/assets/css/2-base/_base.scss
@@ -125,3 +125,32 @@ footer {
   text-align: right;
   padding-bottom: 2.01rem;
 }
+
+
+
+@media screen and (max-width: 800px) {
+  :root {
+    font-size: 20px;
+  }
+
+  h1 {
+    margin: .67em auto;
+    max-width: 4em;
+    text-align: center;
+  }
+
+  header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+  }
+
+  nav {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 100%;
+  }
+}
