--- a/assets/css/3-sections/_default.scss
+++ b/assets/css/3-sections/_default.scss
@@ -12,6 +12,7 @@ li {
   font-weight: bold;
   font-size: 1.3195em;
   color: $midgray;
+  line-height: 1.2;
 }
 
 .call-and-response ul > li:nth-of-type(2n) {
