--- a/assets/css/2-base/_base.scss
+++ b/assets/css/2-base/_base.scss
@@ -89,6 +89,7 @@ h2 {
   font-size: 1.5157em;
   color: $h2color;
   font-weight: normal;
+  margin: 0.67em auto 1.34em auto;
 }
 
 h2 > span {
@@ -137,6 +138,7 @@ footer {
     margin: .67em auto;
     max-width: 4em;
     text-align: center;
+    margin: 0.67em auto 1.34em auto;
   }
 
   header {
