Some more line height edits and box shadow tweaking

--- a/assets/css/2-base/_base.scss
+++ b/assets/css/2-base/_base.scss
@@ -77,8 +77,8 @@ nav a:hover, footer a:hover {
 h1 {
   font-size: 2em;
   color: $almostwhite;
-  box-shadow: 0 0 22px 27px $blue;
-  line-height: 1.2;
+  box-shadow: 0 0 22px 28px $blue;
+  line-height: $sm-line-height;
   background: $blue;
   font-weight: normal;
   display: inline-block;
@@ -89,6 +89,7 @@ h2 {
   font-size: 1.5157em;
   color: $h2color;
   font-weight: normal;
+  line-height: $md-line-height;
   margin: 0.67em auto 1.34em auto;
 }
 
