--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -19,6 +19,10 @@ $textcolor: $black
 $h1color: $lightorange
 $h2color: $black
 
+//type
+$sm-line-height: 1.2
+$md-line-height: 1.4
+
 //Screen size for responsiveness
 $small-screen: 320px
 $mid-screen: 768px
