--- a/assets/css/3-sections/_default.scss
+++ b/assets/css/3-sections/_default.scss
@@ -12,7 +12,7 @@ li {
   font-weight: bold;
   font-size: 1.3195em;
   color: $midgray;
-  line-height: 1.2;
+  line-height: $sm-line-height;
 }
 
 .call-and-response ul > li:nth-of-type(2n) {
