--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,6 +7,7 @@
     {% assign sortedPosts = site.posts | sort: 'order' %}
     <header>
       <h1>{{ site.data.settings.title }}</h1>
+      <h1 class="h1--mini">{{ site.data.settings.title }}</h1>
       <!-- {{ site.data.settings.description }} -->
 
       <nav>
