--- a/assets/css/2-base/_base.scss
+++ b/assets/css/2-base/_base.scss
@@ -1,7 +1,7 @@
 * {
   position: relative;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 :root {
@@ -22,26 +22,30 @@
 
 body {
   background: $almostwhite;
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   line-height: 1.6;
 }
 
-a:link, a:visited {
+a:link,
+a:visited {
   color: inherit;
   text-decoration: none;
 }
 
-a:hover, a:active {
+a:hover,
+a:active {
   color: inherit;
   text-decoration: none;
 }
 
-main, header, footer {
-  max-width: 30rem;
+main,
+header,
+footer {
+  max-width: 28rem;
   margin: 0 auto;
-  padding: 0 1.34rem;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  padding: 0 2.68rem;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
 }
 
 header {
@@ -49,46 +53,65 @@ header {
   margin-top: 1.34rem;
 }
 
-
 nav {
   font-size: 0.8706em;
   margin-top: 1.34rem;
 }
 
-nav a, footer a {
+nav a,
+footer a {
   display: inline-block;
   border: solid $midgray 1px;
-  padding: .5em;
-  margin-right: .4rem;
-  border-radius: .25em;
-  -webkit-transition: .2s ease-out;
-  transition: .2s ease-out;
-  margin-bottom: .67rem;
+  padding: 0.5em;
+  margin-right: 0.4rem;
+  border-radius: 0.25em;
+  -webkit-transition: 0.2s ease-out;
+  transition: 0.2s ease-out;
+  margin-bottom: 0.67rem;
 }
 
 nav a:last-of-type {
   margin-right: 0;
 }
 
-nav a:hover, footer a:hover {
+nav a:hover,
+footer a:hover {
   border-color: $black;
-  -webkit-box-shadow: -.25em .25em 0px 0px $black;
-          box-shadow: -.25em .25em 0px 0px $black;
-  -webkit-transform: translateX(.25em) translateY(-.25em);
-          transform: translateX(.25em) translateY(-.25em);
+  -webkit-box-shadow: -0.25em 0.25em 0px 0px $black;
+  box-shadow: -0.25em 0.25em 0px 0px $black;
+  -webkit-transform: translateX(0.25em) translateY(-0.25em);
+  transform: translateX(0.25em) translateY(-0.25em);
 }
-
 
 h1 {
   font-size: 2em;
   color: $almostwhite;
   -webkit-box-shadow: 0 0 22px 28px $blue;
-          box-shadow: 0 0 22px 28px $blue;
+  box-shadow: 0 0 22px 28px $blue;
   line-height: $sm-line-height;
   background: $blue;
   font-weight: normal;
   display: inline-block;
   border-radius: 35%;
+}
+
+h1.h1--mini {
+  position: fixed;
+  font-size: .5em;
+  top: 1rem;
+  text-align: center;
+  left: 1.34rem;
+  transition: opacity .3s ease-out 0s;
+  opacity: 0;
+  max-width: 4em;
+  box-shadow: 0 0 11px 14px #1e44ff;
+  pointer-events: none;
+}
+
+.scrolledDown h1.h1--mini {
+  opacity: 1;
+  transition-delay: 0.2s;
+  pointer-events: all;
 }
 
 h2 {
@@ -104,7 +127,7 @@ h2 > span {
 }
 
 h2 > span:after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   z-index: -1;
@@ -113,13 +136,13 @@ h2 > span:after {
   bottom: 0;
   background: #fff468;
   -webkit-box-shadow: 0px 0px 20px 15px #fff468;
-          box-shadow: 0px 0px 20px 15px #fff468;
+  box-shadow: 0px 0px 20px 15px #fff468;
   border-radius: 25%;
 }
 
 section {
   margin-bottom: 4.69rem;
-  padding-top: .67rem;
+  padding-top: 0.67rem;
 }
 
 section:last-of-type {
@@ -135,6 +158,15 @@ footer {
   padding-bottom: 2.01rem;
 }
 
+@media screen and (max-width: 930px) {
+  .atTop {
+   opacity: 1;
+  }
+
+  .scrolledDown {
+   opacity: 1;
+  }
+}
 
 
 @media screen and (max-width: 800px) {
@@ -143,7 +175,7 @@ footer {
   }
 
   h1 {
-    margin: .67em auto;
+    margin: 0.67em auto;
     max-width: 4em;
     text-align: center;
     margin: 0.67em auto 1.34em auto;
@@ -155,14 +187,14 @@ footer {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
   }
 
   nav {
@@ -171,14 +203,14 @@ footer {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
     -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
     width: 100%;
   }
 }
