--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,6 +18,11 @@
 
     <main>
 
+    <section id="logo-splash">
+      <img src="{{ site.baseurl }}/assets/images/y2y.jpg" alt="Y2Y Logo">
+      <img src="{{ site.baseurl }}/assets/images/youthcontinuum.jpg" alt="Youth Continuum Logo">
+    </section>
+
     {% for post in sortedPosts %}
     <section id="{{ post.slug }}">
       <h2>
