--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,8 +19,8 @@
     <main>
 
     <section id="logo-splash">
-      <img src="{{ site.baseurl }}/assets/images/y2y.jpg" alt="Y2Y Logo">
-      <img src="{{ site.baseurl }}/assets/images/youthcontinuum.jpg" alt="Youth Continuum Logo">
+      <img src="{{ site.baseurl }}/assets/images/y2y.png" alt="Y2Y Logo">
+      <img src="{{ site.baseurl }}/assets/images/youthcontinuum.png" alt="Youth Continuum Logo">
     </section>
 
     {% for post in sortedPosts %}
