--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
 
   <div id="logo-splash">
-    <img src="{{ site.baseurl }}/assets/images/y2y.png" alt="Y2Y Logo">
+    <img style="margin-left: -2.5rem; box-sizing: border-box; padding: 1rem;" src="{{ site.baseurl }}/assets/images/y2y.png" alt="Y2Y Logo">
     <img src="{{ site.baseurl }}/assets/images/youthcontinuum.png" alt="Youth Continuum Logo">
   </div>
   <a href="#top">&uarr; Go to top</a>
